tests/invalid/types.ri
extern (C) {
    fn malloc(sz: usize) *void;
    fn free(pointer: &void) void; // FAIL
}

struct St {
    f1: &i32; // FAIL

    f2: (i32, i32, i32, i32, i32, i32, i32, i32, i32);

    f3: void;

    f4: pkg;
    f5: =;
}

fn main() { }
